--- a/CocktailCatalog/app/src/main/res/values/strings.xml
+++ b/CocktailCatalog/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="history">History</string>
     <string name="add">Add Drink</string>
     <string name="favorite">Favorite Drinks</string>
+
+    <string name="add_to_favorite">add drink to favorites</string>
+    <string name="remove_from_favorite">remove drink from favorites</string>
+    <string name="ingredients">Ingredients:</string>
 </resources>
