--- a/CocktailCatalog/app/src/main/res/values/strings.xml
+++ b/CocktailCatalog/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="ingredients">Ingredients:</string>
     <string name="search_results">Drinks that You can make:</string>
     <string name="no_drinks_found">Sorry, no drinks found</string>
+    <string name="are_you_over_18_years_old">Are you over 18 years old?</string>
 </resources>
