--- a/CocktailCatalog/app/src/main/res/values/strings.xml
+++ b/CocktailCatalog/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="over_18">false</string>
+    <string name="recent_drinks">Recent drinks:</string>
 </resources>
