added spinner to add drink view

--- a/CocktailCatalog/app/src/main/res/values/strings.xml
+++ b/CocktailCatalog/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="no">No</string>
     <string name="over_18">false</string>
     <string name="recent_drinks">Recent drinks:</string>
+    <string name="category">Category</string>
 </resources>
